fixed text-align of enter a new task to the left

--- a/static/style.css
+++ b/static/style.css
@@ -121,7 +121,7 @@ h1 {
 
 .delete-btn {
     background: #8FA7EB;
-    color: white;
+    color: black;
 }
 
 .save-btn {
